# Utter

./: .gitignore  BUILD_PLAN.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-concurrency-model.md
packaging/: installer.iss  launch_utter.py  launch_utterd.py  utter.spec
src/utter/: __init__.py  __main__.py  app.py  cli.py  daemon.py  gpu.py  hotkey.py  logging_setup.py  paths.py  singleinstance.py  startup.py
src/utter/core/: config.py  formatting.py  history.py  injector.py  pipeline.py  recorder.py  transcription.py
src/utter/ui/: branding.py  overlay.py  tray.py  tui.py
tests/: test_config.py  test_formatting.py  test_hotkey.py  test_pipeline.py  test_tui.py
