[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "utter"
version = "0.1.0"
description = "Free, open-source, fully local dictation for Windows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    # §2.1 pins — verified working on the target Blackwell (sm_120) GPU. Bump deliberately only.
    "faster-whisper==1.2.1",
    "ctranslate2==4.8.1",
    "nvidia-cublas-cu12==12.9.2.10",
    "nvidia-cudnn-cu12==9.24.0.43",
    "numpy>=1.26",
    "sounddevice>=0.5",
    "pynput>=1.7.7",
    "pyperclip>=1.9",
    "pystray>=0.19.5",
    "pillow>=10",
    "textual>=0.80",
    "typer>=0.12",
    "tomli-w>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
utter = "utter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
